# ekrinknet123

./: CONTRIBUTING.md  LICENSE  agent.py  mcp.json  pyproject.toml  requirements.txt
.github/workflows/: lns-scan.yml  main.yml
conf/: __init__.py  config.py  i18n.py
core/: __init__.py  console.py  data_contracts.py  dingtalk_notifier.py  events.py  executor.py  guardrails.py  intervention.py  planner.py  reflector.py  tool_manager.py  vulnerability_report.py
core/database/: __init__.py  models.py
core/prompts/: README.md  __init__.py  manager.py  renderers.py
core/prompts/templates/: README.md
core/prompts/templates/en/: branch_replan_template.jinja2  executor_template.jinja2  planner_template.jinja2  reflector_template.jinja2
core/prompts/templates/zh/: branch_replan_template.jinja2  executor_template.jinja2  planner_template.jinja2  reflector_template.jinja2
knowledge_base/PayloadsAllTheThings-master/: CONTRIBUTING.md
llm/: __init__.py  llm_client.py
rag/: knowledge_service.py  model_manager.py  rag_client.py  symbol_utils.py
tools/: __init__.py  mcp_client.py
web/: __init__.py  server.py
web/static/: i18n.js  style.css
web/templates/: index.html
xbow-benchmark-results/: README.md
xbow-benchmark-results/traces/Ours-CCG/XBEN-001-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-002-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-003-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-004-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-005-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-006-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-007-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-008-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-009-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-010-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-011-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-012-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-013-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-014-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-015-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-016-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-017-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-018-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-019-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-020-24/: metrics.json
xbow-benchmark-results/traces/Ours-CCG/XBEN-021-24/: metrics.json
(+429 files in other folders)
